--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.15.14",
     "@polkadot/extension-dapp": "^0.46.9",
     "@polkadot/extension-inject": "^0.46.9",
+    "@polkadot/react-identicon": "^3.6.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
